tests/paczka1/small_fuzzy/33602584.err
Error in line 1: eZy2s5grRM A135 25,3
Error in line 6: eZy2s5grRM S117 41,1
